@@ -100,6 +100,19 @@
             Assert.AreEqual("Customers", insert.TableName);
         }
 
+        [TestMethod]
+        public void CompileSimpleInsertWithColumnNamesAndValues()
+        {
+            ICommand cmd = Compile("insert into Customers(Name, Address) values('Name 1', 'Address 1')");
+
+            Assert.IsNotNull(cmd);
+            Assert.IsInstanceOfType(cmd, typeof(InsertCommand));
+
+            InsertCommand insert = (InsertCommand)cmd;
+
+            Assert.AreEqual("Customers", insert.TableName);
+        }
+
         private static ICommand Compile(string text)
         {
             Parser parser = new Parser(text);
